--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "url": "git://github.com/behrang/moment-jalaali.git"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^6.7.1",
-    "mocha": "^7.1.0"
+    "chai": "4.2.0",
+    "eslint": "6.7.1",
+    "mocha": "7.1.0"
   },
   "dependencies": {
-    "jalaali-js": "^1.1.0",
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21",
-    "rimraf": "^2.6.2"
+    "jalaali-js": "1.1.0",
+    "moment": "2.24.0",
+    "moment-timezone": "0.5.21",
+    "rimraf": "2.6.2"
   }
 }
